# NTNU-Artificial-Intelligence

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
hw1/: 1-neuron-sigmoid.py  1-neuron-tanh.py  2-neurons-leaky-relu.py  2-neurons-sigmoid.py  3-neurons-sigmoid.py  README.md  area.py  result.csv  train.py
hw2/: IDASTAR.py  IDS.py  README.md  generate-test.py  input.txt  simulate.py
hw3/: README.md  back.py  board.py  computer.py  constant.py  game.py  generate-test.py  input.txt  main.py  piece.py
hw4/: README.md
