[tool.poetry]
name = "artificial-intelligence"
version = "0.1.0"
description = ""
authors = ["KennethOng02 <kennethongkp@gmail.com>"]
readme = "README.md"
packages = [{include = "artificial_intelligence"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
